# streamlit-demo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.demo/: demo-4.json  demo-5.json  demo_0.json  demo_1.json  demo_2.json  demo_3.json  introduction.md  notebook-to-app-demo.json
.demo/notes/: demo-mfbbe1i1-pkw9_notes.md
.demo/snippets/: demo_0_final.py  demo_0_markdown.md  demo_0_markdown_edit.md  demo_0_start.py  demo_2_start.py  demo_3_radio.py  demo_3_start.py  demo_3_topic_driven_charts.py  demo_4_start.py  demo_5_start.py
.devcontainer/: devcontainer.json
app/: first_app.py  titanic_app.py
docs/: uv-setup.md
notebooks/: data_exploration.ipynb  titanic_data_exploration.ipynb
src/streamlit_demo/: __init__.py  beer_model.py  charting_helper.py  titanic_wrangler.py
tests/: test_titanic_wrangler.py
